--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "server",
     "description": "ODM App",
-    "author": "Raymond SO <rso@ouhk.edu.hk>",
+    "author": "Raymond SO <raymond.wc.so@gmail.com>",
     "version": "0.0.1",
     "dependencies": {
-        "mongoose": "^4.10.8"
+        "mongoose": "^5.12.0"
     },
-    "engine": "node >= 0.10.0",
+    "engine": "node >= 12.0.0",
     "scripts": {
         "start": "node server"
     }
