--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "author": "Raymond SO <raymond.wc.so@gmail.com>",
     "version": "0.0.1",
     "dependencies": {
-        "mongoose": "^5.12.0"
+        "async": "^3.2.4",
+        "mongoose": "^7.4.1"
     },
     "engine": "node >= 12.0.0",
     "scripts": {
